添加table接口
